@@ -116,6 +116,24 @@ procedure Gnat1drv is
    ----------------------------
 
    procedure Adjust_Global_Switches is
+      procedure SPARK_Library_Warning (Kind : String);
+      --  Issue a warning in GNATprove mode if the run-time library does not
+      --  fully support IEEE-754 floating-point semantics.
+
+      ---------------------------
+      -- SPARK_Library_Warning --
+      ---------------------------
+
+      procedure SPARK_Library_Warning (Kind : String) is
+      begin
+         Write_Line
+           ("warning: run-time library may be configured incorrectly");
+         Write_Line
+           ("warning: (SPARK analysis requires support for " & Kind & ')');
+      end SPARK_Library_Warning;
+
+   --  Start of processing for Adjust_Global_Switches
+
    begin
       --  -gnatd.M enables Relaxed_RM_Semantics
 
@@ -500,29 +518,15 @@ procedure Gnat1drv is
          --  Detect that the runtime library support for floating-point numbers
          --  may not be compatible with SPARK analysis of IEEE-754 floats.
 
-         declare
-            procedure SPARK_Library_Warning (Kind : String);
-            --  Issue a warning in GNATprove mode if the run-time library does
-            --  not fully support IEEE-754 floating-point semantics.
+         if Denorm_On_Target = False then
+            SPARK_Library_Warning ("float subnormals");
 
-            procedure SPARK_Library_Warning (Kind : String) is
-            begin
-               Write_Line
-                 ("warning: run-time library may be configured incorrectly");
-               Write_Line
-                 ("warning: (SPARK analysis requires support for " & Kind
-                  & ')');
-            end SPARK_Library_Warning;
+         elsif Machine_Rounds_On_Target = False then
+            SPARK_Library_Warning ("float rounding");
 
-         begin
-            if Denorm_On_Target = False then
-               SPARK_Library_Warning ("float subnormals");
-            elsif Machine_Rounds_On_Target = False then
-               SPARK_Library_Warning ("float rounding");
-            elsif Signed_Zeros_On_Target = False then
-               SPARK_Library_Warning ("signed zeros");
-            end if;
-         end;
+         elsif Signed_Zeros_On_Target = False then
+            SPARK_Library_Warning ("signed zeros");
+         end if;
       end if;
 
       --  Set Configurable_Run_Time mode if system.ads flag set or if the
