@@ -1,3 +1,8 @@
+2017-04-28  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* exp_util.adb, g-dyntab.adb, par-ch4.adb, sem_util.adb, sem_attr.adb,
+	gnat1drv.adb, exp_disp.adb, namet.adb, alloc.ads: Minor reformatting.
+
 2017-04-28  Gary Dismukes  <dismukes@adacore.com>
 
 	* exp_util.adb: Minor reformatting.
